finish welcome/add tabs

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -5,7 +5,7 @@
       </button>
     </div>
     <div><a routerLink="/">LOGO</a></div>
-    <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
+    <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide fxShow.gt-xs>
       <ul fxLayout fxLayoutGap="10px" class="navigation-items">
         <li><a routerLink="/signup">Signup</a></li>
         <li><a routerLink="/login">Login</a></li>
