--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -4,15 +4,15 @@
       <mat-card-title fxLayoutAlign="center">Time to start a workout!</mat-card-title>
       <mat-card-content fxLayoutAlign="center">
         <mat-form-field>
-          <mat-select placeholder="Choose one" ngModel name="excersise" required>
-            <mat-option *ngFor="let excersise of exercises" [value]="excersise.id">
-              {{ excersise.name }}
+          <mat-select placeholder="Choose one" ngModel name="exercise" required>
+            <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+              {{ exercise.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions fxLayoutAlign="center">
-        <button type="submit" [disabled]="f.invalid" mat-button>Start</button>
+        <button type="submit" mat-button [disabled]="f.invalid">Start</button>
       </mat-card-actions>
     </mat-card>
   </form>
