--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group *ngIf="!ongoingTraining">
-  <mat-tab label="New Excercise">
-    <app-new-training (trainingStart)="ongoingTraining = true"></app-new-training>
+  <mat-tab label="New Exercise">
+    <app-new-training></app-new-training>
   </mat-tab>
-  <mat-tab label="Past Excercises">
+  <mat-tab label="Past Exercises">
     <app-past-training></app-past-training>
   </mat-tab>
 </mat-tab-group>
